# url-shortener-challenge

./: .gitignore  README.md  docker-compose.yaml
angular-webapp/: dockerfile  tsconfig.json
angular-webapp/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
angular-webapp/src/app/add-url-modal/: add-url-modal.component.html  add-url-modal.component.spec.ts  add-url-modal.component.ts
shortener/: dockerfile  pyproject.toml
shortener/source/application/: create_shortened_url.py  exceptions.py  get_all_url.py  redirect_url.py
shortener/source/domain/: url.py
shortener/source/infraestructure/: env.py  http_server.py  jwt.py  mongo.py
shortener/source/ports/: key_generator.py  url_repository.py  user_repository.py
shortener/tests/: test_create_shortened_url_service.py  test_get_all_url_service.py  test_redirect_url_service.py  test_url.py
users/: dockerfile  pyproject.toml
users/source/adapters/controllers/: user.py
users/source/adapters/hash/: password_encrypter.py
users/source/adapters/jwt/: token_generator.py
users/source/adapters/repositories/user/: fake.py  postgres.py
users/source/application/: exceptions.py  login_user.py  register_user.py
users/source/domain/: user.py
users/source/infraestructure/: env.py  http_server.py  models.py  postgres.py
users/source/infraestructure/database/: models.py  postgres.py
users/source/ports/: password_encrypter.py  token_generator.py  user_repository.py
users/tests/: test_login_user_service.py  test_register_user_service.py  test_user.py
(+18 files in other folders)
