[tool.poetry]
name = "users-app"
version = "0.1.0"
description = ""
authors = ["pedro <pluvet01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
SQLAlchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
PyJWT = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
